<resources>
    <string name="app_name">AircraftWar</string>
    <string name="GameRankList">单机游戏得分排行榜</string>
    <string name="GameOnlineRankList">游戏排行</string>
    <string name="OnlineGameStart">联网游戏</string>
    <string name="GameMall">道具商城</string>
    <string name="GameStart">单机游戏</string>
    <string name="todo">TODO</string>
    <string name="Easy">简单</string>123
    <string name="Common">中等</string>
    <string name="Difficult">困难</string>
    <string name="SoundSelect">音效开关</string>
    <string name="Rank">排名</string>
    <string name="GameScore">游戏得分</string>
    <string name="GameDateTime">游戏时间</string>
    <string name="EasyRankList">简单排行榜</string>
    <string name="DifficultRankList">困难排行榜</string>
    <string name="CommonRankList">普通排行榜</string>
    <string name="Delete">删除</string>
    <string name="Login">登录</string>
    <string name="Enroll">注册</string>
    <string name="AircraftWar">飞机大战</string>
    <string name="userName">账号</string>
    <string name="userName_seen" />
    <string name="password_seen" />
    <string name="password">密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="remember">记住密码</string>
    <string name="passwordSure">确认\n密码</string>
    <string name="playerName">名字</string>
    <string name="DifficultOnlineRankList">联网困难排行榜</string>
    <string name="CommonOnlineRankList">联网普通排行榜</string>
    <string name="EasyOnlineRankList">联网简单排行榜</string>

</resources>