<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_main"
    tools:context=".Activities.GameLoginActivity">

    <Button
        android:id="@+id/LoginGameButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Login"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/userName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/userNameLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:ems="10"
        android:password="true"
        android:text="@string/password_seen"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:text="@string/password"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/passwordLogin"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameLogin"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/userName_seen"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/rememberPasswordBox"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="300dp"
        android:bufferType="normal"
        android:text="@string/remember"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>