<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_main"
    tools:context=".Activities.GameEnrollActivity">

    <EditText
        android:id="@+id/passwordEnrollSure"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:password="true"
        android:text="@string/userName_seen"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/EnrollGameButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="472dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Enroll"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordEnrollSureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:text="@string/passwordSure"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/passwordEnrollSure"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordEnroll"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="268dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:ems="10"
        android:password="true"
        android:text="@string/userName_seen"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordEnrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="@string/password"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/passwordEnroll"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/playerNameEnrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/playerName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/playerNameEnroll"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usernameEnrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/userName"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/userNameEnroll"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userNameEnroll"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/userName_seen"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/playerNameEnroll"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="28dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/userName_seen"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>