<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.GameOnlineRankListActivity">

    <ListView
        android:id="@+id/GameRankListView"
        android:layout_width="413dp"
        android:layout_height="576dp"
        android:dividerHeight="3dp"
        android:scrollbarSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/first2"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="@string/Rank"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/second2"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/playerName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/third2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/third2"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/GameScore"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/fourth2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fourth2"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/GameDateTime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/OnlineGameLevelText"
        android:layout_width="411dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>