<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_main"
    android:backgroundTintMode="screen"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".Activities.GameMenuActivity">

    <TextView
        android:id="@+id/playerNameText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:gravity="top|left"
        android:text="qwe"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/plane_activity_main" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/GameStartButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rotationY="30"
            android:text="@string/GameStart"
            android:textSize="28sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/OnlineGameStartButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rotationY="-30"
            android:text="@string/OnlineGameStart"
            android:textSize="28sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/GameMallButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rotationY="30"
            android:text="@string/GameMall"
            android:textSize="28sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/GameOnlineRankListButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:rotationY="-30"
            android:text="@string/GameOnlineRankList"
            android:textSize="28sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>