<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_activity_main"
    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/EnrollButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Enroll"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="116dp"
        android:text="@string/Login"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/AircraftWar"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="80sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bomb" />
</android.support.constraint.ConstraintLayout>